# third_party_mesa3d

./: .gitignore  BUILD.gn  OAT.xml  README.OpenSource  bundle.json  dependency_inputs.gni  meson.build  meson_options.txt  ohos_cross.ini
android/: mesa3d_cross.mk
include/: ohos_log.h
include/EGL/: eglext.h
include/vulkan/: vulkan.h  vulkan_core.h
ohos/: BUILD.gn  README.md  README_zh.md  build_mesa3d.py  build_ohos.py  build_ohos64.py  build_wayland_and_gbm.py  cross_file  dependency_inputs.gni  hilog_common.h  meson_cross_process.py  meson_cross_process64.py  modifyDtsi.py
ohos/pkgconfig_template/: expat.pc  gbm.pc  libbegetutil.pc  libdrm.pc  libhilog.pc  libhitrace.pc  libjpeg.pc  libpng.pc  libqos.pc  libsurface.pc  libudev.pc  libxml2.pc  wayland-client.pc  wayland-cursor.pc  wayland-egl-backend.pc  wayland-egl.pc  wayland-protocols.pc  wayland-scanner.pc  wayland-server.pc  zlib.pc
pkgconfig/: expat.pc  libdrm.pc  libhilog.pc  libsurface.pc  zlib.pc
src/amd/vulkan/: radv_image.c
src/compiler/: shader_enums.h
src/compiler/glsl/: bc1.glsl  bc4.glsl  float64q.glsl  gl_nir_lower_blend_equation_advanced.c  glsl_to_nir.cpp  meson.build
src/compiler/nir/: meson.build  nir.h  nir_double_pack_records.c  nir_double_pack_records.h  nir_lower_clip_halfz.c  nir_lower_double_ops.c  nir_search.c
src/egl/: meson.build
src/egl/drivers/dri2/: egl_dri2.c  egl_dri2.h  platform_android.c  platform_device.c  platform_ohos.c  platform_ohos.h  platform_surfaceless.c  platform_wayland.c  platform_x11.c  platform_x11_dri3.c
src/egl/main/: eglapi.c  egldisplay.c  egldisplay.h  egllog.c  egllog.h
src/gallium/auxiliary/indices/: u_primconvert.c
src/gallium/auxiliary/nir/: tgsi_to_nir.c
src/gallium/auxiliary/tgsi/: tgsi_build.c  tgsi_ureg.c  tgsi_ureg.h
src/gallium/auxiliary/util/: u_screen.c  u_simple_shaders.c  u_threaded_context.c
src/gallium/drivers/panfrost/: pan_screen.c
src/gallium/drivers/zink/: driinfo_zink.h  zink_batch.c  zink_blit.c  zink_clear.c  zink_compiler.c  zink_context.c  zink_descriptors.c  zink_draw.cpp  zink_instance.py  zink_kopper.c  zink_kopper.h  zink_program.c  zink_render_pass.c  zink_resource.c  zink_screen.c  zink_synchronization.cpp  zink_types.h
src/gallium/drivers/zink/nir_to_spirv/: nir_to_spirv.c  spirv_builder.c  spirv_builder.h
src/gallium/frontends/dri/: dri2.c  dri_context.c
src/gallium/include/pipe/: p_defines.h  p_shader_tokens.h
src/intel/dev/: intel_debug.h  intel_device_info.h
src/intel/vulkan/: anv_private.h
src/loader/: loader.c  loader.h  meson.build
src/mesa/main/: blend.c  blend.h  bufferobj.h  clear.c  context.c  draw.c  draw_validate.c  mtypes.h  readpix.c  teximage.c  version.c
src/mesa/state_tracker/: st_atom_blend.c  st_cb_readpixels.c  st_cb_texture.c
src/panfrost/lib/: pan_props.c
src/util/: build_id.c  detect_os.h  log.c  meson.build  u_memory.h  u_mm.c  u_queue.c  u_queue.h
src/util/perf/: cpu_trace.h  sys_param.cpp  sys_param.h
src/vulkan/registry/: vk.xml
